--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     }
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.121.27",
+    "@tanstack/react-router-devtools": "^1.121.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -39,6 +41,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.25.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/router-plugin": "^1.121.29",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
