--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     }
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.80.10",
     "@tanstack/react-router": "^1.121.27",
     "@tanstack/react-router-devtools": "^1.121.27",
     "react": "^19.1.0",
@@ -41,6 +42,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.25.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/eslint-plugin-query": "^5.78.0",
     "@tanstack/router-plugin": "^1.121.29",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
