--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tanstack/react-query": "^5.80.10",
     "@tanstack/react-router": "^1.121.27",
     "@tanstack/react-router-devtools": "^1.121.27",
+    "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
