--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@eslint/js": "^9.25.0",
     "@storybook/addon-a11y": "^9.0.12",
     "@storybook/addon-docs": "^9.0.12",
+    "@storybook/addon-links": "^9.0.13",
     "@storybook/addon-onboarding": "^9.0.12",
     "@storybook/addon-vitest": "^9.0.12",
     "@storybook/react-vite": "^9.0.12",
