--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "uplife-remake",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "author": "",
+  "license": "ISC",
   "type": "module",
+  "bugs": {
+    "url": "https://github.com/joao-almeida11/uplife-remake/issues"
+  },
+  "homepage": "https://github.com/joao-almeida11/uplife-remake#readme",
+  "description": "Uplife remake app",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
     "check-format": "prettier --list-different \"./**/*.{ts,tsx,js,jsx,json,md,css,sass,scss}\"",
     "format": "prettier --write \"./**/*.{ts,tsx,js,jsx,json,md,css,sass,scss}\"",
     "lint-staged": "lint-staged",
     "prepare": "husky",
-    "commit": "cz-git",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "coverage": "vitest run --coverage"
+    "commit": "cz-git"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joao-almeida11/uplife-remake.git"
   },
   "lint-staged": {
     "*.js": "eslint --fix",
@@ -34,48 +37,12 @@
       "path": "node_modules/cz-git"
     }
   },
-  "dependencies": {
-    "@tanstack/react-query": "^5.80.10",
-    "@tanstack/react-router": "^1.121.27",
-    "@tanstack/react-router-devtools": "^1.121.27",
-    "radix-ui": "^1.4.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.0.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.25.0",
-    "@storybook/addon-a11y": "^9.0.12",
-    "@storybook/addon-docs": "^9.0.12",
-    "@storybook/addon-links": "^9.0.13",
-    "@storybook/addon-onboarding": "^9.0.12",
-    "@storybook/addon-vitest": "^9.0.12",
-    "@storybook/react-vite": "^9.0.12",
-    "@tailwindcss/vite": "^4.1.10",
-    "@tanstack/eslint-plugin-query": "^5.78.0",
-    "@tanstack/router-plugin": "^1.121.29",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "@vitest/browser": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4",
     "commitlint": "^19.8.1",
     "cz-git": "^1.11.2",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^9.0.12",
-    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
-    "playwright": "^1.53.1",
-    "prettier": "^3.5.3",
-    "storybook": "^9.0.12",
-    "tailwindcss": "^4.1.10",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "vitest": "^3.2.4"
+    "prettier": "^3.6.1"
   }
 }
