--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx --watch --env-file .env src/index.ts",
     "start": "node --env-file .env dist/src/index.js",
     "build": "tsc -p tsconfig.build.json",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "author": "",
   "license": "ISC",
