--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uplife-remake",
+  "name": "@repo/web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -23,6 +23,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@chromatic-com/storybook": "^4.0.1",
     "@eslint/js": "^9.25.0",
     "@storybook/addon-a11y": "^9.0.12",
@@ -32,19 +34,12 @@
     "@storybook/addon-vitest": "^9.0.12",
     "@storybook/react-vite": "^9.0.12",
     "@tailwindcss/vite": "^4.1.10",
-    "@tanstack/eslint-plugin-query": "^5.78.0",
     "@tanstack/router-plugin": "^1.121.29",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/eslint-plugin": "^1.2.7",
-    "eslint": "^9.25.0",
-    "eslint-plugin-perfectionist": "^4.15.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^9.0.12",
     "globals": "^16.0.0",
     "playwright": "^1.53.1",
     "storybook": "^9.0.12",
