--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,4 +1,5 @@
 {
-  "extends": "@repo/typescript-config/tsconfig.app.json", 
+  "extends": "@repo/typescript-config/tsconfig.app.json",
   "include": ["src"],
+  "exclude": ["dist", "build", "node_modules"]
 }
