--- a/turbo.json
+++ b/turbo.json
@@ -1,15 +1,27 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "tasks": {
+    "install": { 
+      "outputs": ["**/node_modules/**"] 
+    },
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": ["dist/**"]
+      "outputs": ["dist/**", "storybook-static/**"]
     },
-    "lint": {},
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "clean": {
+      "cache": false
+    },
+    "preview-storybook": {
+      "dependsOn": ["^build"],
+      "cache": false
     }
   }
 }
