--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,8 @@
     "start": "node --env-file .env dist/src/index.js",
     "build": "tsc -p tsconfig.build.json",
     "type-check": "tsc --noEmit",
-    "lint": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'"
+    "lint": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "clean": "rm -rf node_modules"
   },
   "author": "",
   "license": "ISC",
