--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,6 +5,7 @@
   "packageManager": "pnpm@10.12.4",
   "private": true,
   "type": "module",
+  "sideEffects": false,
   "exports": {
     "./app": "./app.js",
     "./node": "./node.js"
@@ -13,6 +14,7 @@
     "@eslint/js": "^9.30.1",
     "@tanstack/eslint-plugin-query": "^5.81.2",
     "@vitest/eslint-plugin": "^1.3.4",
+    "eslint": "^9.30.1",
     "eslint-plugin-perfectionist": "^4.15.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
