--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -2,5 +2,10 @@
   "name": "@repo/typescript-config",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.12.4"
+  "packageManager": "pnpm@10.12.4",
+  "sideEffects": false,
+  "devDependencies": {
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.1"
+  }
 }
