--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,10 @@
 packages:
-  - "apps/*"
-  - "packages/*"
+  - apps/*
+  - packages/*
+
+ignoredBuiltDependencies:
+  - "@tailwindcss/oxide"
+  - esbuild
+
+onlyBuiltDependencies:
+  - "@swc/core"
