--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -31,6 +31,7 @@
     "@storybook/addon-onboarding": "^9.0.15",
     "@storybook/addon-vitest": "^9.0.15",
     "@storybook/react-vite": "^9.0.15",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "clsx": "^2.1.1",
