--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,13 +2,29 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "sideEffects": false,
-  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "./button": {
-      "types": "./src/button.tsx",
-      "import": "./dist/button.mjs"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./Button": {
+      "types": "./dist/Button.d.ts",
+      "import": "./dist/Button.mjs",
+      "require": "./dist/Button.js"
+    },
+    "./Header": {
+      "types": "./dist/Header.d.ts",
+      "import": "./dist/Header.mjs",
+      "require": "./dist/Header.js"
     }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
